@@ -1,9 +1,13 @@
 @REM
-@REM Copyright (c) 2001-2020 Mathew A. Nelson and Robocode contributors
+@REM Copyright (c) 2001-2022 Mathew A. Nelson and Robocode contributors
 @REM All rights reserved. This program and the accompanying materials
 @REM are made available under the terms of the Eclipse Public License v1.0
 @REM which accompanies this distribution, and is available at
 @REM https://robocode.sourceforge.io/license/epl-v10.html
 @REM
 
-java -DALLOWLOCALHOST=true -Ddebug=true -Xmx512M -cp libs/robocode.jar:libs/gson-2.8.6.jar -XX:+IgnoreUnrecognizedVMOptions "--add-opens=java.base/sun.net.www.protocol.jar=ALL-UNNAMED" "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED" "--add-opens=java.desktop/javax.swing.text=ALL-UNNAMED" "--add-opens=java.desktop/sun.awt=ALL-UNNAMED" robocode.Robocode %*
+@REM Older than Java 12
+@REM -DALLOWLOCALHOST=true -Ddebug=true java -Xmx512M -cp "libs/*" -XX:+IgnoreUnrecognizedVMOptions "--add-opens=java.base/sun.net.www.protocol.jar=ALL-UNNAMED" "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED" "--add-opens=java.desktop/javax.swing.text=ALL-UNNAMED" "--add-opens=java.desktop/sun.awt=ALL-UNNAMED" robocode.Robocode %*
+
+@REM Java 12 and newer
+java -DALLOWLOCALHOST=true -Ddebug=true -Xmx512M -cp "libs/*" -Djava.security.manager=allow -XX:+IgnoreUnrecognizedVMOptions "--add-opens=java.base/sun.net.www.protocol.jar=ALL-UNNAMED" "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED" "--add-opens=java.desktop/javax.swing.text=ALL-UNNAMED" "--add-opens=java.desktop/sun.awt=ALL-UNNAMED" robocode.Robocode %*
